<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tomasforsman.snookerscore.MainActivity">

    <TextView
        android:id="@+id/textP1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player1"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textP2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/player2"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageP1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/player1_img_desc"
        app:layout_constraintStart_toEndOf="@+id/textP1Name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/male_user" />

    <ImageButton
        android:id="@+id/imageP2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/player2_img_desc"
        app:layout_constraintEnd_toStartOf="@+id/textP2Name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/male_user" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        app:layout_constraintBottom_toTopOf="@+id/buttonPink"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBrown" />

    <Button
        android:id="@+id/buttonPink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pink"
        app:layout_constraintBottom_toTopOf="@+id/buttonRed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlue" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red"
        app:layout_constraintBottom_toTopOf="@+id/buttonBlack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPink" />

    <Button
        android:id="@+id/buttonBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRed" />

    <Button
        android:id="@+id/buttonYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yello"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBrown"
        app:layout_constraintEnd_toStartOf="@+id/buttonBrown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBrown" />

    <Button
        android:id="@+id/buttonBrown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brown"
        app:layout_constraintBottom_toTopOf="@+id/buttonBlue"
        app:layout_constraintEnd_toStartOf="@+id/buttonGreen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonYellow"
        app:layout_constraintTop_toBottomOf="@+id/imageP2" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBrown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBrown"
        app:layout_constraintTop_toTopOf="@+id/buttonBrown" />

    <TextView
        android:id="@+id/textP1ScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageP1" />

    <TextView
        android:id="@+id/textP1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_p1_score"
        app:layout_constraintBottom_toBottomOf="@+id/textP1ScoreTitle"
        app:layout_constraintEnd_toEndOf="@+id/imageP1"
        app:layout_constraintStart_toStartOf="@+id/imageP1"
        app:layout_constraintTop_toTopOf="@+id/textP1ScoreTitle" />

    <TextView
        android:id="@+id/textP2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_p2_score"
        app:layout_constraintBottom_toBottomOf="@+id/textP1ScoreTitle"
        app:layout_constraintEnd_toEndOf="@+id/imageP2"
        app:layout_constraintStart_toStartOf="@+id/imageP2"
        app:layout_constraintTop_toTopOf="@+id/textP1ScoreTitle" />

    <TextView
        android:id="@+id/textBreakTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/break_score"
        app:layout_constraintEnd_toStartOf="@+id/imageP2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageP1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_break"
        app:layout_constraintBottom_toBottomOf="@+id/textBreakTitle"
        app:layout_constraintEnd_toStartOf="@+id/imageP2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textBreakTitle"
        app:layout_constraintTop_toTopOf="@+id/textBreakTitle" />

    <TextView
        android:id="@+id/textLeftOnTableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/left_on_table"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonPink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBlue"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textLeftOnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_left_on_table"
        app:layout_constraintBottom_toBottomOf="@+id/textLeftOnTableTitle"
        app:layout_constraintStart_toEndOf="@+id/textLeftOnTableTitle"
        app:layout_constraintTop_toTopOf="@+id/textLeftOnTableTitle" />

    <TextView
        android:id="@+id/textRedOnTableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/red_on_table"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonRed"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/textRedOnTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="15"
        app:layout_constraintBottom_toBottomOf="@+id/textRedOnTableTitle"
        app:layout_constraintStart_toEndOf="@+id/textRedOnTableTitle"
        app:layout_constraintTop_toTopOf="@+id/textRedOnTableTitle" />

    <Button
        android:id="@+id/buttonMiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/miss"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPink"
        app:layout_constraintTop_toTopOf="@+id/buttonPink" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/foul_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/foul_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/foul_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/foul_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/foul_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <TextView
        android:id="@+id/textBehindAheadTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ahead"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonPink" />

    <TextView
        android:id="@+id/textBehindAhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/behind_ahead_score"
        app:layout_constraintBottom_toBottomOf="@+id/textBehindAheadTitle"
        app:layout_constraintStart_toEndOf="@+id/textBehindAheadTitle"
        app:layout_constraintTop_toTopOf="@+id/textBehindAheadTitle"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
